--- a/pages/content/amp-dev/runner/success-stories/pronto.yaml
+++ b/pages/content/amp-dev/runner/success-stories/pronto.yaml
@@ -49,7 +49,7 @@ stage:
       alt: Pronto
 
 kpis:
-  - value: "&#x1F4C8; &nbsp;&nbsp; value"
+  - value: "&#x1F4C8; &nbsp;&nbsp;&nbsp;&nbsp; value"
     text: Wafer cheesecake lollipop fruitcake danish powder. Pudding croissant biscuit icing. Gummi bears fruitcake cake wafer cake cookie caramels marshmallow bonbon.
 
   - value: "&#x1F4C9; expense"
