--- a/pages/content/amp-dev/romeo/_blueprint.yaml
+++ b/pages/content/amp-dev/romeo/_blueprint.yaml
@@ -6,6 +6,7 @@ $localization:
 $order: 6
 
 flyout:
+    - /content/amp-dev/romeo/0/index.html
     - /content/amp-dev/romeo/1/index.html
     - /content/amp-dev/romeo/2/index.html
     - /content/amp-dev/romeo/3/index.html
