--- a/pages/content/amp-dev/romeo/0/24-02-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-02-01.yaml
@@ -89,7 +89,7 @@ contents:
 
   - layout: text
     headline: "The fastest way to learn is to peak over the tangible examples."
-    text: "You can use CSS to customize your styling and dynamic data to fetch the freshest data where needed.
+    text: "You can use CSS to customize your styling and dynamic data to fetch the freshest data where needed."
 
   - layout: text
     text: "Get started quickly with a ready-made design. Templates designed to work with all devices - mobile, tablet and desktop."
