--- a/pages/content/amp-dev/romeo/0/_blueprint.yaml
+++ b/pages/content/amp-dev/romeo/0/_blueprint.yaml
@@ -1,6 +1,6 @@
 $title: Blog
 $view: /views/default.j2
-$path: /0/{base}.html
+$path: /romeo/0/{base}.html
 $localization:
-  path: /{locale}/0/{base}.html
+  path: /{locale}/romeo/0/{base}.html
 $order: 1
