--- a/pages/content/amp-dev/romeo/0/24-02-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-02-01.yaml
@@ -4,7 +4,7 @@ $category: electronic commerce
 $date: 2024-02-01
 description: Now is the time for action.
 $localization:
-  path: /{locale}/{base}.html
+  path: /{locale}/romeo/0/{base}.html
 
 teaser:
   image:
