--- a/pages/content/amp-dev/romeo/0/23-10-01.yaml
+++ b/pages/content/amp-dev/romeo/0/23-10-01.yaml
@@ -2,7 +2,7 @@ $title@: Socrato
 $view: /views/detail/success-story-detail.j2
 $category: graph analytics
 $date: 2023-10-01
-description: Create flawless web experiences
+description: Create flawless web experiences using only magic
 $localization:
   path: /{locale}/romeo/0/{base}.html
 
@@ -17,7 +17,7 @@ teaser:
     width: 1986
     height: 346
     alt: Pronto
-  text: Create flawless web experiences
+  text: Create flawless web experiences using only magic
 
 stage:
   headline: Open this snippet in playground
@@ -48,15 +48,14 @@ stage:
       type: mobile
       alt: 
 
-contents@:
+contents:
   - layout: text-media
     image_src: /static/img/blog/shared/cake-880x880.jpg
     width: 880
     height: 880
     type: mobile
     alt: cake
-    headline@: Begin building for creation, design and development.
-    text@: Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
+    headline: <p>The Accelerated Mobile Pages (AMP) Project is an open source initiative that came out of discussions between publishers and technology companies about the need to improve the entire mobile content ecosystem for everyone -- publishers, consumer platforms, advertisers, creators, and users.</p>\n<p>Today, the expectation is that content should load super fast and be easy to explore. The reality is that content can take several seconds to load, or, because the user abandons the slow page, never fully loads at all. Accelerated Mobile Pages are web pages designed to load near instantaneously -- they are a step towards a better mobile web for all.</p>
 
   - layout: text-media
     image_src: /static/img/blog/shared/dummy-asking-1000x650.png
