--- a/pages/content/amp-dev/romeo/0/24-03-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-03-01.yaml
@@ -17,7 +17,7 @@ teaser:
     width: 2052
     height: 560
     alt: Pronto
-  text: The sun is a star. But don't look at it - you be blinded.
+  text: The sun is a star. But don't look at it - you'll be blinded.
 
 stage:
   headline: A faster way to grow your business
