--- a/pages/content/amp-dev/romeo/0/24-01-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-01-01.yaml
@@ -55,8 +55,8 @@ contents:
     height: 880
     type: mobile
     alt: cake
-    headline: Begin building for creation, design and development.
-    text: Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
+    headline@: Begin building for creation, design and development.
+    text@: Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
 
   - layout: text-media
     image_src: /static/img/blog/shared/dummy-asking-1000x650.png
