added headline@ to 24-03-01.yaml:23 and added reference to en, fr, es, pt_BR

--- a/pages/content/amp-dev/romeo/0/24-03-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-03-01.yaml
@@ -20,7 +20,7 @@ teaser:
   text: The sun is a star. But don't look at it - you'll be blinded.
 
 stage:
-  headline: A faster way to grow your business
+  headline@: A faster way to grow your business
   subline: March 1, 2024
   layout: all
   logo:
