--- a/pages/content/amp-dev/romeo/0/24-03-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-03-01.yaml
@@ -2,7 +2,7 @@ $title@: Plato
 $view: /views/detail/success-story-detail.j2
 $category: application development
 $date: 2024-03-01
-description: The sun is a star. But don't look at it - you be blinded.
+description: You're currently not connected to the internet.
 $localization:
   path: /{locale}/romeo/0/{base}.html
 
@@ -17,7 +17,7 @@ teaser:
     width: 2052
     height: 560
     alt: Pronto
-  text: The sun is a star. But don't look at it - you'll be blinded.
+  text@: You're currently not connected to the internet.
 
 stage:
   headline@: A faster way to grow your business
