testing 24-03-01.yaml stage using content from Story

--- a/pages/content/amp-dev/romeo/0/24-03-01.yaml
+++ b/pages/content/amp-dev/romeo/0/24-03-01.yaml
@@ -20,7 +20,7 @@ teaser:
   text@: You're currently not connected to the internet.
 
 stage:
-  headline@: A faster way to grow your business
+  headline@: Web page speed improves the user experience and core business metrics
   subline: March 1, 2024
   layout: all
   logo:
