--- a/pages/content/amp-dev/sambo/_blueprint.yaml
+++ b/pages/content/amp-dev/sambo/_blueprint.yaml
@@ -1,6 +1,6 @@
 $title@: Guidance
 $path: /sambo/{base}.html
-$view: /views/detail/docs-detail.j2
+$view: /views/2021/base.html
 $localization:
   path: /{locale}/sambo/{base}.html
 $order: 1
