--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-          cache: npn
+          cache: npm
 
       - name: Installing Node.js packages
         run: npm ci
@@ -54,7 +54,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-          cache: npn
+          cache: npm
 
       - name: Installing Node.js packages
         run: npm ci
@@ -105,7 +105,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-          cache: npn
+          cache: npm
 
       - name: Installing Node.js packages
         run: npm ci
@@ -155,7 +155,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-          cache: npn
+          cache: npm
 
       - name: Installing Node.js packages
         run: npm ci
