--- a/pages/content/amp-dev/community/working-groups/_blueprint.yaml
+++ b/pages/content/amp-dev/community/working-groups/_blueprint.yaml
@@ -4,3 +4,8 @@ $path: /community/working-groups/{base}.html
 $localization:
   path: /{locale}/community/working-groups/{base}.html
 $order: 1
+
+flyout:
+  format: websites
+  description: getting together
+  icon: amp-websites
