--- a/pages/content/amp-dev/about/_blueprint.yaml
+++ b/pages/content/amp-dev/about/_blueprint.yaml
@@ -12,6 +12,7 @@ flyout:
     - /content/amp-dev/about/email.html
     - /content/amp-dev/about/how-amp-works.html
     - /content/amp-dev/about/how-linked-data-works.html
+    - /content/amp-dev/about/rdf-in-fifty.html
     - /content/amp-dev/about/mission-and-vision.html
     - /content/amp-dev/about/use-cases.html
 #    - /content/amp-dev/about/success-stories/index.html
