--- a/pages/content/amp-dev/sambo/_blueprint.yaml
+++ b/pages/content/amp-dev/sambo/_blueprint.yaml
@@ -1,10 +1,10 @@
 $title@: Guidance
 $path: /sambo/{base}.html
-$view: /views/default.j2
+$view: /views/2021/base.html
 $localization:
   path: /{locale}/sambo/{base}.html
 $order: 1
 
 flyout:
     - /content/amp-dev/sambo/index.html
-#    - /content/amp-dev/sambo/guide-tutorial/index.html
+    - /content/amp-dev/sambo/docs/index.html
