--- a/pages/content/amp-dev/sambo/docs/_blueprint.yaml
+++ b/pages/content/amp-dev/sambo/docs/_blueprint.yaml
@@ -1,9 +1,9 @@
 $title@: Design Templates
 $view: /views/2021/base.html
-$path: /runner/docs/{base}.html
+$path: /sambo/docs/{base}.html
 $localization:
-  path: /{locale}/runner/docs/{base}.html
+  path: /{locale}/sambo/docs/{base}.html
 $order: 1
 
 flyout:
-    - /content/amp-dev/runner/docs/index.html
+    - /content/amp-dev/sambo/docs/index.html
