--- a/pages/content/amp-dev/runner/success-stories/_blueprint.yaml
+++ b/pages/content/amp-dev/runner/success-stories/_blueprint.yaml
@@ -1,6 +1,5 @@
-$title: Success Stories
+$title@: Success Stories
+$view: /views/detail/success-story-detail.j2
 $path: /runner/success-stories/{base}.html
-# $view: /views/2021/base.html
-$view: /views/default.j2
 $localization:
   path: /{locale}/runner/success-stories/{base}.html
