--- a/pages/content/amp-dev/runner/success-stories/pronto.yaml
+++ b/pages/content/amp-dev/runner/success-stories/pronto.yaml
@@ -49,13 +49,16 @@ stage:
       alt: Pronto
 
 kpis:
-  - value: "&#x1F4C8; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; value"
+  - value: value
+    icon: code-architecture
     text: Wafer cheesecake lollipop fruitcake danish powder. Pudding croissant biscuit icing. Gummi bears fruitcake cake wafer cake cookie caramels marshmallow bonbon.
 
-  - value: "&#x1F4C9; expense"
+  - value: expense
+    icon: fast-loading
     text: Jelly jujubes marshmallow donut. Pudding croissant biscuit icing. Gummi bears fruitcake cake wafer cake cookie caramels marshmallow bonbon.
 
-  - value: "&#x1F91D; coordinate"
+  - value: coordinate
+    icon: interaction
     text: Wafer cheesecake lollipop fruitcake danish powder. Pudding croissant biscuit icing. Gummi bears fruitcake cake wafer cake cookie caramels marshmallow bonbon.
 
 contents:
