added icon to success-story-detail

--- a/pages/content/amp-dev/runner/success-stories/pronto.yaml
+++ b/pages/content/amp-dev/runner/success-stories/pronto.yaml
@@ -4,7 +4,7 @@ $category: finance
 $date: 2024-03-05
 description: Pronto data kits to rapidly develop product specifications
 formats:
-  - websites
+  - stories
 
 teaser:
   image:
