--- a/pages/content/amp-dev/documentation/guides-and-tutorials/start/test/_blueprint.yaml
+++ b/pages/content/amp-dev/documentation/guides-and-tutorials/start/test/_blueprint.yaml
@@ -1,5 +1,5 @@
 $path: /documentation/guides-and-tutorials/start/test/{base}.html
-$view: /views/2021/base.html
+$view: /views/detail/docs-detail.j2
 $order: 5
 $localization:
   path: /{locale}/documentation/guides-and-tutorials/start/test/{base}.html
