--- a/pages/content/amp-dev/documentation/courses/uber-course/level-3/_blueprint.yaml
+++ b/pages/content/amp-dev/documentation/courses/uber-course/level-3/_blueprint.yaml
@@ -1,4 +1,4 @@
-$title@: from linked data
+$title@: linked data level 3
 $view: /views/detail/docs-detail.j2
 $path: /documentation/courses/uber-course/level-3/{base}.html
 $localization:
