--- a/pages/content/amp-dev/documentation/courses/introduction/_blueprint.yaml
+++ b/pages/content/amp-dev/documentation/courses/introduction/_blueprint.yaml
@@ -1,8 +1,8 @@
-$title@: Uber Course
+$title@: Introduction
 $view: /views/detail/docs-detail.j2
-$path: /documentation/courses/uber-course/{base}.html
+$path: /documentation/courses/intoduction/{base}.html
 $localization:
-  path: /{locale}/documentation/courses/uber-course/{base}.html
+  path: /{locale}/documentation/courses/intoduction/{base}.html
 $order: 5
 toc: false
 
