testing if condition for benefits web stories developer

--- a/pages/shared/data/benefits.yaml
+++ b/pages/shared/data/benefits.yaml
@@ -57,6 +57,7 @@ stories:
   developer:
     - headline: Create beautiful and engaging content easily
       text: Web Stories make the production of stories as easy as possible from a technical perspective.
+      text-2: Cookie topping chocolate cake chocolate topping biscuit caramels lollipop danish.
       icon: code-architecture
     - headline: Creative flexibility for editorial freedom and branding
       text: The Web Stories format comes with preset but flexible layout templates, standardized UI controls, and components for sharing and adding follow-on content.
