--- a/pages/shared/data/benefits.yaml
+++ b/pages/shared/data/benefits.yaml
@@ -56,14 +56,14 @@ stories:
       icon: circle-arrows-money
   developer:
     - headline: Create beautiful and engaging content easily
-      text: Web Stories make the production of stories as easy as possible from a technical perspective.
+      text-1: Web Stories make the production of stories as easy as possible from a technical perspective.
       text-2: Cookie topping chocolate cake chocolate topping biscuit caramels lollipop danish.
       icon: code-architecture
     - headline: Creative flexibility for editorial freedom and branding
-      text: The Web Stories format comes with preset but flexible layout templates, standardized UI controls, and components for sharing and adding follow-on content.
+      text-1: The Web Stories format comes with preset but flexible layout templates, standardized UI controls, and components for sharing and adding follow-on content.
       icon: components
     - headline: Sharable and linkable on the open web
-      text: Web Stories are part of the open web and can be shared and embedded across sites and apps without being confined to a single ecosystem.
+      text-1: Web Stories are part of the open web and can be shared and embedded across sites and apps without being confined to a single ecosystem.
       icon: share
 ads:
   business:
