added more data

--- a/pages/shared/data/benefits.yaml
+++ b/pages/shared/data/benefits.yaml
@@ -58,6 +58,8 @@ stories:
     - headline: Create beautiful and engaging content easily
       text: Web Stories make the production of stories as easy as possible from a technical perspective.
       text_2: Cookie topping chocolate cake chocolate topping biscuit caramels lollipop danish.
+      text_3: Cheesecake chocolate bar candy canes candy tart cotton candy chocolate cake croissant cake.
+      text_4: Filet mignon pork belly beef, flank ball tip doner alcatra ribeye bresaola leberkas t-bone short ribs ham pastrami jerky.
       icon: code-architecture
     - headline: Creative flexibility for editorial freedom and branding
       text: The Web Stories format comes with preset but flexible layout templates, standardized UI controls, and components for sharing and adding follow-on content.
