--- a/pages/content/amp-dev/documentation/_blueprint.yaml
+++ b/pages/content/amp-dev/documentation/_blueprint.yaml
@@ -11,5 +11,6 @@ flyout:
     - /content/amp-dev/documentation/components/index.html
     - /content/amp-dev/documentation/examples/index.html
     - /content/amp-dev/documentation/courses/index.html
+    - /content/amp-dev/documentation/tutorial/index.html
     - /content/amp-dev/documentation/templates/index.html
     - /content/amp-dev/documentation/tools.html
