--- a/pages/content/amp-dev/documentation/tutorial-p/103/102/_blueprint.yaml
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/102/_blueprint.yaml
@@ -1,4 +1,4 @@
-$title@: 
+$title@: Components
 $view: /views/detail/docs-detail.j2
 $path: /documentation/tutorial-p/103/102/{base}.html
 $localization: 
