--- a/pages/shared/data/tutorial-p.yaml
+++ b/pages/shared/data/tutorial-p.yaml
@@ -1,5 +1,5 @@
 item:
   - heading_1: "##"
-  - heading_2: "Tell a story"
+  - heading_2: "<pre>Tell a story</pre>"
   - text_1: "Now is the time for action."
   - text_2: "The sun is a star."
