simplified Story MD; testing PO for MD files

--- a/pages/content/amp-dev/documentation/tutorial-h/888/_blueprint.yaml
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/_blueprint.yaml
@@ -5,7 +5,7 @@ $localization:
   path: /{locale}/documentation/tutorial-h/888/{base}.html
 $order: 88
 bucket: true
-chaptered: true
-tutorial: true
+chaptered: false
+tutorial: false
 formats:
   - websites
