--- a/pages/shared/data/tutorial-p.yaml
+++ b/pages/shared/data/tutorial-p.yaml
@@ -1,4 +1,4 @@
-item:
+content:
   - heading_1: "Tell a story about &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A;"
   - heading_2: "&#x201C;Now is the time for action&#x201C;."
   - text_1: "Now is the time for action."
