--- a/pages/shared/data/tutorial-p.yaml
+++ b/pages/shared/data/tutorial-p.yaml
@@ -1,9 +1,9 @@
 content:
-  - heading_1: "Tell a story about &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A;"
-  - heading_2: "&#x201C;Now is the time for action&#x201C;."
-  - text_1: "Now is the time for action."
-  - text_2: "The sun is a star."
-  - text_3: "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
-  - text_4: "Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music."
-  - text_5: "5. Add a comment to the class <code>MargheritaPizza</code> using the <mark>Annotations</mark> view."
-  - text_6: "Our current description of <code>CheesyPizza</code> says that if something is a <code>CheesyPizza</code> it is <i>necessarily</i> <code>Pizza</code> and it is <i>necessary</i> for it to have at least one topping that is a kind of <code>CheeseTopping</code>."
+  - heading_1: 'Tell a story about &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A;'
+  - heading_2: '&#x201C;Now is the time for action&#x201C;.'
+  - text_1: Now is the time for action.
+  - text_2: The sun is a star.
+  - text_3: 'Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier).'
+  - text_4: 'Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.'
+  - text_5: '5. Add a comment to the class <code>MargheritaPizza</code> using the <mark>Annotations</mark> view.'
+  - text_6: 'Our current description of <code>CheesyPizza</code> says that if something is a <code>CheesyPizza</code> it is <i>necessarily</i> <code>Pizza</code> and it is <i>necessary</i> for it to have at least one topping that is a kind of <code>CheeseTopping</code>.'
